--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -54,6 +54,9 @@
         <servlet-name>JDBCemoServlet</servlet-name>
         <url-pattern>/jdbc</url-pattern>
     </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>home</welcome-file>
+    </welcome-file-list>
     <context-param>
         <param-name>driver</param-name>
         <param-value>jdbc:sqlserver://localhost;databaseName=userdb</param-value>
